Optimizacion de consumo de memoria